manifests/headlamp-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: headlamp-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  gatewayClassName: nginx
  infrastructure:
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: headlamp-proxy-config
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.gpm.my.id"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.gpm.my.id"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: headlamp-cert

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: kube-system
spec:
  parentRefs:
  - name: headlamp-gateway
    sectionName: http
  - name: headlamp-gateway
    sectionName: https
  hostnames:
  - "headlamp.k8s.gpm.my.id"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: headlamp
      port: 80
